--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "console-table-printer": "^2.11.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "pg": "^8.8.0",
+    "pg-format": "^1.0.4"
   }
 }
